<resources>
    <string name="app_name">한국부동산원 현장지원모바일시스템</string>
    <string name="app_sub_name">보상정보시스템 현장조사 모바일</string>
    <string name="app_copyright">copyright ⓒ korea real estate board. all rights reserved.</string>
    <string name="MDM_HOST">mdm.reb.or.kr:44300</string>
    <string name="MDM_COMPANY">20032300</string>
    <string name="login_loading">앱 로딩중입니다.</string>
    <string name="login_ci">부동산원CI</string>
    <string name="login_id_hint_msg">아이디</string>
    <string name="login_pw_hint_msg">비밀번호</string>
    <string name="login_chk_save_msg" translatable="false">아이디 저장</string>
    <string name="login_btn">로그인</string>
    <string name="drawer_app_name">차세대 보상정보\n현장지원 모바일시스템</string>
    <string name="drawer_menu_title_1">사업선택</string>
    <string name="drawer_menu_title_2">시스템</string>
    <string name="drawer_menu_1">용지도</string>
    <string name="drawer_menu_2">토지</string>
    <string name="drawer_menu_3">지장물</string>
    <string name="drawer_menu_4">영업ㆍ축산업ㆍ잠업</string>
    <string name="drawer_menu_5">농업</string>
    <string name="drawer_menu_6">광업권</string>
    <string name="drawer_menu_7">어업권</string>
    <string name="drawer_menu_8">거주자</string>
    <string name="drawer_menu_9">분묘</string>
    <string name="drawer_menu_10">로그아웃</string>
    <string name="drawer_menu_98">잔여지</string>
    <string name="drawer_menu_99">잔여건물</string>
    <string name="drawer_layer_menu_1">일반</string>
    <string name="drawer_layer_menu_2">레이어</string>
    <string name="drawer_layer_menu_3">범례</string>
    <string name="drawer_layer_submenu_1">시도 경계</string>
    <string name="drawer_layer_submenu_2">시군구 경계</string>
    <string name="drawer_layer_submenu_3">읍면동 경계</string>
    <string name="drawer_layer_submenu_4">리경계</string>
    <string name="drawer_layer_submenu_5">지적편집도 (네이버)</string>
    <string name="drawer_layer_submenu_6">사업구역(용지도)</string>
    <string name="drawer_layer_submenu_7">편집지적도</string>
    <string name="drawer_layer_submenu_8">토지</string>
    <string name="drawer_layer_submenu_9">토지실제이용</string>
    <string name="drawer_layer_submenu_10">지장물</string>
    <string name="drawer_layer_submenu_11">영업</string>
    <string name="drawer_layer_submenu_12">농업</string>
    <string name="drawer_layer_submenu_13">거주자</string>
    <string name="drawer_layer_submenu_14">분묘</string>
    <string name="drawer_layer_submenu_16">현장조사</string>
    <string name="drawer_layer_submenu_17">확정</string>
    <string name="drawer_layer_submenu_18">감정평가</string>
    <string name="drawer_layer_submenu_19">계약</string>
    <string name="main_tv_1">감정평가</string>
    <string name="main_plus_menu_1">당초지번</string>
    <string name="main_plus_menu_2">편입지번</string>
    <string name="main_plus_menu_3">당초면적</string>
    <string name="main_plus_menu_4">편입지번</string>
    <string name="main_plus_menu_5">지목</string>
    <string name="main_plus_menu_6">소유자</string>
    <string name="main_plus_menu_detail_1">50-2</string>
    <string name="main_plus_menu_detail_2">50</string>
    <string name="main_plus_menu_detail_3">50-3</string>
    <string name="main_plus_menu_detail_4">50</string>
    <string name="main_plus_menu_detail_5">임야</string>
    <string name="main_plus_menu_detail_6">확인</string>
    <string name="bizJibunSearchNo">토지번호</string>
    <string name="bizJibunBgnnLnm">원래지번</string>
    <string name="bizJibunIncrprLnm">편입지번</string>
    <string name="bizJibunBgnnAr">원래면적</string>
    <string name="bizJibunIncrprAr">편입면적</string>
    <string name="bizJibunGobuLndcgrNm">지목</string>
    <string name="bizJibunLegaldongNm">소재지</string>
    <string name="bizJibunOwnerName">소유자</string>
    <string name="bizJibunDcnsAt">확정\n여부</string>
    <string name="msg_permission_title">앱 권한설정</string>
    <string name="msg_permission_content">정상적으로 사용하기 위해서 디바이스의 위치 및 카메라 접근 권한이 필요합니다</string>
    <string name="msg_permission_y">권한설정</string>
    <string name="msg_permsission_n">확인</string>
    <string name="msg_permission_fail">요청한 권한이 거부되어 앱을 종료합니다. \n 권한허용 후 재시동해주세요.</string>
    <string name="msg_permsission_status_success">요청한 권한이 승인되었습니다.</string>
    <string name="msg_permsission_status_fail">요청한 권한이 승인되지 않았습니다.</string>
    <string name="msg_mdm_fail">MDM 앱 인증이 실패 하였습니다. 앱이 실행되지 않습니다 \n 관리자에서 문의 후 사용해 주시기 바람니다</string>
    <string name="msg_server_login_fail">로그인에 실패하였습니다. \n 아이디 및 비밀번호 확인 후 다시 시도해주시기 바랍니다.</string>
    <string name="msg_server_connected_text">잠시만 기다려주세요. \n 서버데이터를 불러오는중입니다.</string>
    <string name="msg_server_connected_fail">서버 접속이 불안정합니다. \n 확인 후 작업해주세요.</string>
    <string name="msg_server_bsns_connected_fail">보상사업을 불러 오지 못했습니다 \n 잠시 후 다시 시도해 주시기 바랍니다.</string>
    <string name="msg_server_connected_resut_empty">데이터가 존재하지 않습니다.</string>
    <string name="msg_server_connected_resut_Lad_empty">현재 지역에는 토지 데이터가 존재하지 않습니다.</string>
    <string name="msg_server_connected_resut_realLad_empty">현재 지역에는 토지실제이용 데이터가 존재하지 않습니다.</string>
    <string name="msg_server_connected_resut_thing_empty">현재 지역에는 지장물 데이터가 존재하지 않습니다.</string>
    <string name="msg_server_connected_resut_tomb_empty">현재 지역에는 분묘 데이터가 존재하지 않습니다.</string>
    <string name="msg_server_connected_resut_farm_empty">현재 지역에는 농업 데이터가 존재하지 않습니다.</string>
    <string name="msg_server_connected_resut_residnt_empty">현재 지역에는 거주자 데이터가 존재하지 않습니다.</string>
    <string name="msg_server_connected_resut_bsn_empty">현재 지역에는 영업 데이터가 존재하지 않습니다.</string>
    <string name="msg_server_connected_resut_minrgt_empty">현재 지역에는 광업권 데이터가 존재하지 않습니다.</string>
    <string name="msg_search_dcsc_at_resut">확정된 조서 입니다. 확정된 조서는 변경 할 수 없습니다.</string>
    <string name="map_wfs_cadastral_minzoom">17레벨 미만에서는 지적도 레이어를 불러올 수 없습니다.</string>
    <string name="map_wfs_reallad_minzoom">17레벨 미만에서는 토지실제이용 레이어를 불러올 수 없습니다.</string>
    <string name="map_wfs_thing_minzoom">17레벨 미만에서는 지장물 레이어를 불러올 수 없습니다.</string>
    <string name="msg_login_validation_success">로그인이 되었습니다.</string>
    <string name="msg_login_validation_fail">아이디 또는 비밀번호를 다시 확인해주세요.</string>
    <string name="msg_alert_y">확인</string>
    <string name="msg_alert_n">취소</string>
    <string name="msg_alert_yy">예</string>
    <string name="msg_alert_nn">아니오</string>
    <string name="msg_logout_title">로그아웃</string>
    <string name="msg_logout_content">앱을 로그아웃 하시겠습니까?</string>
    <string name="msg_map_title">Map</string>
    <string name="msg_map_contents">지도에서 작업중인 내용을 \n 취소하시겠습니까??</string>
    <string name="msg_sketch_success">필지 스케치가 적용되었습니다.</string>
    <string name="msg_indoor_sketch_success">실내배치도 스케치가 적용되었습니다.</string>
    <string name="msg_sketch_minzoom">20레벨 미만에서는 편집모드를 실행 할 수 없습니다.</string>
    <string name="msg_undo">이전 스케치 이력이 존재하지 않습니다.</string>
    <string name="msg_redo">다음 스케치 이력이 존재하지 않습니다.</string>
    <string name="msg_layer_add">실내 배치도 레이어 추가.</string>
    <string name="msg_action_modfity">편집모드</string>
    <string name="msg_action_remove">선택한 필지스케치가 삭제되었습니다.</string>
    <string name="msg_action_modfity_fail">선택모드를 선택해주세요.</string>
    <string name="msg_action_remove_fail">삭제모드를 선택해주세요.</string>
    <string name="msg_server_response_fail">server result value : none</string>
    <string name="msg_camera_document_scan_fail">문서를 인식할 수 없습니다. 다시 찍어주세요</string>
    <string name="msg_camera_document_crop_ifno">꼭지점을 드래그하여 편집영역을 지정해주세요.</string>
    <string name="msg_search_hint">검색어를 입력해주세요.</string>
    <string name="msg_polygon_edit_title">편집</string>
    <string name="msg_polygon_edit_content">선택된 필지를 편집하시겠습니까?</string>
    <string name="msg_inooorsketch_insert_text">선택된 필지를 편집하시겠습니까?</string>
    <string name="msg_server_"></string>
    <string name="geoserver_wms_url">http://192.168.51.146:8444/geoserver/ncms/wms?</string>
    <string name="geoserver_wfs_url">http://192.168.51.146:8444/geoserver/ncms/ows?"</string>
    <string name="geoserver_kais_wfs_url">http://192.168.51.83/geoserver/cite/wfs?"</string>
    <string name="server_bsns_mng_list">http://192.168.51.146:8444/bsns/bsnsChoiseList.do</string>
    <string name="mobile_url">http://192.168.51.146:8444/mobile/</string>
    <string name="naver_geocoding_gc">http://naveropenapi.apigw.ntruss.com/map-reversegeocode/v2/gc</string>
    <string name="login_err_msg_id">잘못된 형식입니다.</string>
    <string name="login_err_msg_pw">잘못된 비밀번호 형식입니다.</string>
    <string name="catro_license_code">
        XTUMwQ0ZDL0F4cnZsd0JmRldKWWcwQlBhUzJwcVVYaTRBaFVBaVJMcTNxbVlFR1liZTk1SWIyeTUzb3BhUnBvPQoKYXBwVG9rZW49ZjIzMWU0ZDAtMzdlNy00NzYyLWFkYTMtZDkxMjU4NzZlM2EwCnBhY2thZ2VOYW1lPWNvbS5jYXJ0by5naXNtYXAuYW5kcm9pZApvbmxpbmVMaWNlbnNlPTEKcHJvZHVjdHM9c2RrLWFuZHJvaWQtNC4qCndhdGVybWFyaz1jYXJ0b2RiCg==
    </string>
    <string name="naver_license_code">9mek16psq2</string>
    <string name="fab_toolbar_1">도형 도구</string>
    <string name="fab_toolbar_2">뒤로</string>
    <string name="fab_toolbar_3">앞으로</string>
    <string name="fab_toolbar_4">점</string>
    <string name="fab_toolbar_5">선·도형</string>
    <string name="fab_toolbar_6">편집</string>
    <string name="fab_toolbar_7">삭제</string>
    <string name="fab_toolbar_8">나가기</string>
    <string name="fab_toolbar_9">저장</string>
    <string name="fab_indoor_toolbar_1">실내스케치 도구</string>
    <string name="fab_indoor_toolbar_2">이전</string>
    <string name="fab_indoor_toolbar_3">다음</string>
    <string name="fab_indoor_toolbar_4">선긋기</string>
    <string name="fab_indoor_toolbar_5">사각형</string>
    <string name="fab_indoor_toolbar_6">저장</string>
    <string name="fab_indoor_toolbar_7">타원</string>
    <string name="fab_indoor_toolbar_8">초기화</string>
    <string name="fab_indoor_toolbar_9">텍스트</string>
    <string name="fab_indoor_toolbar_10">저장</string>
    <string name="wtnncCommNum">No</string>
    <string name="wtnncCommLocplc">소재지</string>
    <string name="wtnncCommDcsnAt">확정여부</string>
    <string name="wtnncCommOriginalLnm">원래 지번</string>
    <string name="wtnncCommincrprLnm">편입 지번</string>
    <string name="wtnncCommLndcgr">지목</string>
    <string name="wtnncCommRelateLnm">관련 지번</string>
    <string name="wtnncCommAllAr">전체 면적</string>
    <string name="wtnncCommIncrprAr">편입 면적</string>
    <string name="wtnncCommLandOwner">토지 소유자</string>
    <string name="wtnncCommLandPartcpnt">토지 관계인</string>
    <string name="wtnncCommSclas">소분류</string>
    <string name="wtnncCommThingKnd">물건의 종류</string>
    <string name="wtnncCommStrctStndrd">구조 및 규격</string>
    <string name="wtnncCommIndoorTy">실내여부</string>
    <string name="wtnncCommLadReal">실제이용현황</string>
    <string name="wtnncCommArQy">면적 및 수량</string>
    <string name="wtnncCommAll">전체</string>
    <string name="wtnncCommIncrpr">편입</string>
    <string name="wtnncCommUnit">단위</string>
    <string name="wtnncCommArComputBasis">면적산출근거</string>
    <string name="wtnncCommRm">비고</string>
    <string name="wtnncCommRegist">등록</string>
    <string name="wtnncCommRegistDe">*등록일자</string>
    <string name="wtnncCommAr">면적</string>
    <string name="wtnncCommCntnncPd">존속기간</string>
    <string name="wtnncCommCntnncPdBgnde">존속기간시작</string>
    <string name="wtnncCommCntnncPdEndde">존속기간끝</string>
    <string name="wtnncCommbqestPsn">청구인</string>
    <string name="wtnncCommbqestCn">청구내용</string>
    <string name="wtnncCommInput">입력</string>
    <string name="wtnncCommCancel">취소</string>
    <string name="wtnncCommAddChoiceOwner">소유자 선택</string>
    <string name="landSe">구분</string>
    <string name="minrgtDayCount">일수</string>
    <string name="minrgtAvrgWage">평균임금</string>
    <string name="minrgtCmercWage">통상임금</string>
    <string name="minrgtBeforeDe">근로장소\n이전일자</string>
    <string name="minrgtunemployedDe">실직일자</string>
    <string name="minrgtunemployedResn">실직사유</string>
    <string name="ownerSelect">선택</string>
    <string name="ownerDivision">구분</string>
    <string name="ownerName">이름</string>
    <string name="ownerSameName">-</string>
    <string name="ownerCprNo">주민(법인)번호</string>
    <string name="ownerDelvyAddr">송달주소</string>
    <string name="ownerSearchDiv">조서\n구분</string>
    <string name="ownerRgistAdres">등기부주소</string>
</resources>