<?xml version="1.0" encoding="utf-8"?><!--
  ~ Create by sgablc team.eco-chain on 2021.
  ~ Copyright (c) 2021. sgablc. All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@drawable/bg_thing_dialog_radius"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:id="@+id/constraintLayout6">

        <TextView
                android:fontFamily="@font/nsquareextrabold"
                android:autoSizeMaxTextSize="32sp"
                android:textSize="28sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="20dp"
                android:text="@string/wtnncCommAddChoiceOwner"
                android:textColor="@color/theme_root_color_reverse"
                android:id="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"
            android:orientation="horizontal"
            android:id="@+id/addBuldLinkListTitleView">

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/ownerSelect"
                android:layout_weight="1" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/ownerSearchDiv"
                android:layout_weight="1" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/ownerDivision"
                android:layout_weight="1" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/ownerName"
                android:layout_weight="2" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/ownerSameName"
                android:layout_weight="1" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/ownerCprNo"
                android:layout_weight="3" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/ownerRgistAdres"
                android:layout_weight="5" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/ownerDelvyAddr"
                android:layout_weight="5" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/addBuldLinkListBaseViewGroup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintTop_toBottomOf="@+id/addBuldLinkListTitleView"
            android:orientation="horizontal">

        <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addChoiceOwnerListView" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addBuldLinkListBaseViewGroup">

        <Button
                style="@style/Widget.NCMS.Alert.Button.Negative"
                android:id="@+id/cancelBtn"
                android:text="@string/wtnncCommCancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        <Button
                style="@style/Widget.NCMS.Alert.Button.Positive"
                android:id="@+id/selectInputBtn"
                android:text="@string/wtnncCommInput"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>