<?xml version="1.0" encoding="utf-8"?><!--
  ~ Create by sgablc team.eco-chain on 2021.
  ~ Copyright (c) 2021. sgablc. All rights reserved.
  -->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:layout_height="50dp"
                android:text="@string/wtnncCommSclas"
                android:layout_weight="1" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/wtnncCommThingKnd"
                android:layout_weight="1" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/wtnncCommStrctStndrd"
                android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/textview_border">

            <Spinner
                    style="@style/Widget.NCMS.Spinner"/>

        </LinearLayout>

        <EditText
                style="@style/Widget.NCMS.WtnccValueEditText"
                android:layout_weight="1" />

        <EditText
                style="@style/Widget.NCMS.WtnccValueEditText"
                android:layout_weight="2" />


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="0dp">

        <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.853"
                android:layout_margin="2dp"
                android:orientation="vertical">

            <TextView
                    style="@style/Widget.NCMS.WtnccLabelTextView"
                    android:text="@string/wtnncCommArQy"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        style="@style/Widget.NCMS.WtnccLabelTextView"
                        android:layout_height="50dp"
                        android:text="@string/wtnncCommAll"
                        android:layout_weight="1" />

                <TextView
                        style="@style/Widget.NCMS.WtnccLabelTextView"
                        android:text="@string/wtnncCommIncrpr"
                        android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/wtnncCommUnit"
                android:layout_weight="1" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/wtnncCommArComputBasis"
                android:layout_weight="1.5" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.853"
                android:orientation="horizontal">

            <EditText
                    style="@style/Widget.NCMS.WtnccValueEditText"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:inputType="number"/>
            <EditText
                    style="@style/Widget.NCMS.WtnccValueEditText"
                    android:layout_weight="1"
                    android:inputType="number" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:orientation="vertical"
                android:background="@drawable/textview_border">

            <Spinner
                    style="@style/Widget.NCMS.Spinner"/>

        </LinearLayout>

        <EditText
                style="@style/Widget.NCMS.WtnccValueEditText"
                android:layout_weight="1.5" />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:layout_height="50dp"
                android:text="@string/landSe"
                android:layout_weight="1" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/minrgtDayCount"
                android:layout_weight="1" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/minrgtAvrgWage"
                android:layout_weight="1" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/minrgtCmercWage"
                android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        <EditText
                style="@style/Widget.NCMS.WtnccValueEditText"
                android:layout_height="50dp"
                android:layout_weight="1" />

        <EditText
                style="@style/Widget.NCMS.WtnccValueEditText"
                android:layout_weight="1"
                android:inputType="number" />

        <EditText
                style="@style/Widget.NCMS.WtnccValueEditText"
                android:layout_weight="1"
                android:inputType="number" />

        <!--광업지적-->
        <EditText
                style="@style/Widget.NCMS.WtnccValueEditText"
                android:layout_weight="1"
                android:inputType="number" />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/minrgtBeforeDe"
                android:layout_weight="1" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/minrgtunemployedDe"
                android:layout_weight="1" />

        <TextView
                style="@style/Widget.NCMS.WtnccLabelTextView"
                android:text="@string/minrgtunemployedResn"
                android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        <TextView
                style="@style/Widget.NCMS.WtnccValueTextView"
                android:layout_height="50dp"
                android:layout_weight="1" />

        <TextView
                style="@style/Widget.NCMS.WtnccValueTextView"
                android:layout_weight="1" />

        <EditText
                style="@style/Widget.NCMS.WtnccValueTextView"
                android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>